@@ -1,3 +1,7 @@
+2003-03-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/ia64/fpu/libm-test-ulps: Regenerated.
+
 2003-03-04  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/x86_64/clone.S: Add support for the new
